--- a/build
+++ b/build
@@ -12,8 +12,8 @@ while [ "$count" -lt 10 ]; do
     sleep 1
 done
 
-#python engci-jenkins.py
-python Example_2.py
+python engci-jenkins.py
+#python Example_2.py
 
 if [ $? -ne 0 ]
 then
